src/objects/Downloads__c.object
<CustomObject>
    <fields>
        <fullName>Akamai_Download_link__c</fullName>
        <formula>HYPERLINK(  Original_Download_Link__c , &apos;Download&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Akamai Download link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeDownloadButtonLabel__c</fullName>
        <label>Alternative Download Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeDownloadLink__c</fullName>
        <label>Alternative Download Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Build_Number__c</fullName>
        <description>holds build number because versions is changing their form to be year (ex: 2019, 2019 Q1 Expansion)</description>
        <label>Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Key__c</fullName>
        <label>CD Key</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommunityModalLink__c</fullName>
        <description>Field to store the URL that displays in the Learn More section for all cards in the Download Site.</description>
        <inlineHelpText>Field to store the URL that displays in the Learn More section for all cards in the Download Site.</inlineHelpText>
        <label>Community Modal Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Container_Section__c</fullName>
        <label>Container Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MicroStrategy 2020</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy 2019</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy 10.4</fullName>
                </value>
                <value>
                    <fullName>HyperIntelligence</fullName>
                </value>
                <value>
                    <fullName>Desktop Applications</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Federated Analytics</fullName>
                </value>
                <value>
                    <fullName>Gateways &amp; Add-Ons</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy 2021</fullName>
                </value>
                <value>
                    <fullName>Identity 2021</fullName>
                </value>
                <value>
                    <fullName>HyperWeb CRX</fullName>
                </value>
                <value>
                    <fullName>1$ - MicroStrategy Version #</fullName>
                    <isActive>false</isActive>
                    <label>1$ - MicroStrategy Version #</label>
                </value>
                <value>
                    <fullName>2$ - Mobile Applications for #</fullName>
                    <isActive>false</isActive>
                    <label>2$ - Mobile Applications for #</label>
                </value>
                <value>
                    <fullName>3$ - Data Connectors and Plugins for #</fullName>
                    <isActive>false</isActive>
                    <label>3$ - Data Connectors and Plugins for #</label>
                </value>
                <value>
                    <fullName>3$ - Updates, Hotfixes and Patches for #</fullName>
                    <isActive>false</isActive>
                    <label>3$ - Updates, Hotfixes and Patches for #</label>
                </value>
                <value>
                    <fullName>4$ - SDK and Gateways for #</fullName>
                    <isActive>false</isActive>
                    <label>4$ - SDK and Gateways for #</label>
                </value>
                <value>
                    <fullName>4$ - SDK, Gateways, and Add-Ons for #</fullName>
                    <isActive>false</isActive>
                    <label>4$ - SDK, Gateways, and Add-Ons for #</label>
                </value>
                <value>
                    <fullName>5$ - Release Notes, Help, and Project Files for #</fullName>
                    <isActive>false</isActive>
                    <label>5$ - Release Notes, Help, and Project Files for #</label>
                </value>
                <value>
                    <fullName>Release Notes</fullName>
                    <isActive>false</isActive>
                    <label>Release Notes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Released__c</fullName>
        <label>Date Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotShipKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Ship Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_Button_Label__c</fullName>
        <description>Allows dynamic allocation for text on the download button</description>
        <inlineHelpText>Used on the Download Card in the Download Site to display a dynamic download label</inlineHelpText>
        <label>Download Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Name__c</fullName>
        <label>Download Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Download Product</label>
        <referenceTo>Download_Product__c</referenceTo>
        <relationshipLabel>Downloads</relationshipLabel>
        <relationshipName>Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>File ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hash_Signature_MD5__c</fullName>
        <label>Hash Signature MD5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hash_Signature__c</fullName>
        <label>Hash Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotfix_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this looks up to another download record that would display as a hotfix next to its card.</description>
        <label>Hotfix Candidate</label>
        <referenceTo>Downloads__c</referenceTo>
        <relationshipLabel>Hotfix</relationshipLabel>
        <relationshipName>Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotfix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotfix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMobile_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMobile Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <formula>HYPERLINK(  Original_Download_Link__c , &apos;CD Key&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modal_Message__c</fullName>
        <label>Modal Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Downloads__c</fullName>
        <label># Downloads</label>
        <summaryForeignKey>Download_Instance__c.Download__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OS_Dropdown_Label__c</fullName>
        <label>OS Dropdown Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Version</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Add-ons and tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OS_Group__c</fullName>
        <label>OS Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Runtime Environment</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>HP-UX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>10.x Developer Patch</fullName>
                </value>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>Hadoop Gateway</fullName>
                </value>
                <value>
                    <fullName>Health Center</fullName>
                </value>
                <value>
                    <fullName>JSON Data API</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile Android</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile Android SDK</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile iOS SDK</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile iOS SDK ACE</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile iPad</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile iPhone</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Mobile Server Help</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Tutorial Project Files</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Web Help</fullName>
                </value>
                <value>
                    <fullName>R Integration Pack</fullName>
                </value>
                <value>
                    <fullName>Runtime</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>Usher for Mac</fullName>
                </value>
                <value>
                    <fullName>Usher for Windows (32-bit)</fullName>
                </value>
                <value>
                    <fullName>Usher for Windows (64-bit)</fullName>
                </value>
                <value>
                    <fullName>Usher Professional iPad</fullName>
                </value>
                <value>
                    <fullName>Usher Professional iPhone</fullName>
                </value>
                <value>
                    <fullName>Usher Security Android</fullName>
                </value>
                <value>
                    <fullName>Usher Security iPhone</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>HP-UX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Download_Link__c</fullName>
        <label>Original Download Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_ID__c</fullName>
        <label>Release ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S3_Download_Link__c</fullName>
        <label>S3 Download Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Release__c</fullName>
        <label>Section Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature Release</fullName>
                </value>
                <value>
                    <fullName>Test Products</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Platform Release</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Note__c</fullName>
        <formula>Left(Note__c,255)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Beta 1.1</fullName>
                </value>
                <value>
                    <fullName>Beta 1.2</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
                <value>
                    <fullName>Test Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Family__c</fullName>
        <label>Version Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2019 RC</fullName>
                </value>
                <value>
                    <fullName>11.0</fullName>
                </value>
                <value>
                    <fullName>10.4</fullName>
                </value>
                <value>
                    <fullName>10.3</fullName>
                </value>
                <value>
                    <fullName>9.4</fullName>
                </value>
                <value>
                    <fullName>2020 RC</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_ID__c</fullName>
        <label>Version ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10.4.8</fullName>
                </value>
                <value>
                    <fullName>10.4.0</fullName>
                </value>
                <value>
                    <fullName>10.5.0</fullName>
                </value>
                <value>
                    <fullName>10.6.0</fullName>
                </value>
                <value>
                    <fullName>10.7.0</fullName>
                </value>
                <value>
                    <fullName>10.8.0</fullName>
                </value>
                <value>
                    <fullName>10.9.0</fullName>
                </value>
                <value>
                    <fullName>10.10.0</fullName>
                </value>
                <value>
                    <fullName>10.11.0</fullName>
                </value>
                <value>
                    <fullName>11.0.0</fullName>
                </value>
                <value>
                    <fullName>9.4.1</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2019 Update 1</fullName>
                </value>
                <value>
                    <fullName>2019 Update 2</fullName>
                </value>
                <value>
                    <fullName>2019 Update 3</fullName>
                </value>
                <value>
                    <fullName>2019 Update 4</fullName>
                </value>
                <value>
                    <fullName>2020 RC</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019 Update 5</fullName>
                </value>
                <value>
                    <fullName>2020 Update 1</fullName>
                </value>
                <value>
                    <fullName>2020 Update 2</fullName>
                </value>
                <value>
                    <fullName>2019 Update 6</fullName>
                </value>
                <value>
                    <fullName>2019 Update 7</fullName>
                </value>
                <value>
                    <fullName>2020 Update 3</fullName>
                </value>
                <value>
                    <fullName>2020 Update 4</fullName>
                </value>
                <value>
                    <fullName>2021 Update 1</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2019 Update 8</fullName>
                </value>
                <value>
                    <fullName>2021 Update 2</fullName>
                </value>
                <value>
                    <fullName>2020 Update 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Download</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Section_Name__c</columns>
        <columns>OS__c</columns>
        <columns>Version__c</columns>
        <columns>Type__c</columns>
        <columns>Product__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsPublic__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Section_Name__c</field>
            <operation>contains</operation>
            <value>intelligent enter</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Testing</fullName>
        <columns>NAME</columns>
        <columns>Section_Name__c</columns>
        <columns>OS__c</columns>
        <columns>Version__c</columns>
        <columns>Type__c</columns>
        <columns>Product__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsPublic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Section_Name__c</field>
            <operation>contains</operation>
            <value>Workstation</value>
        </filters>
        <label>All Testing</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Download Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Downloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>